2005-06-08  Mark Mitchell  <mark@codesourcery.com>

	* opncls.c (bfd_fopen): Mark returned BFD as cacheable if FD == -1.

2005-06-09  Alan Modra  <amodra@bigpond.net.au>

	* elflink.c (elf_mark_used_section): Delete.
	(bfd_elf_gc_sections): Call bfd_generic_gc_sections.
	* reloc.c (bfd_mark_used_section): New function.
	(bfd_generic_gc_sections): Call bfd_mark_used_section.

2005-06-08  Alan Modra  <amodra@bigpond.net.au>

	* opncls.c (bfd_fopen): Don't set bfd_error unconditionally.
	(bfd_fdopenr): Same.

2005-06-07  Mark Mitchell  <mark@codesourcery.com>

	* opncls.c (bfd_fdopenr): Add missing break statements.

2005-06-07  Mark Mitchell  <mark@codesourcery.com>

	* opncls.c (bfd_fopen): New API.
	(bfd_openr): Use it.
	(bfd_fdopenr): Likewise.
	* bfd-in2.h: Regenerated.

2005-06-07  Aldy Hernandez  <aldyh@redhat.com>
	    Michael Snyder  <msnyder@redhat.com>
	    Stan Cox  <scox@redhat.com>

	* Makefile.am (ALL_MACHINES): Add ms1 support.
	(ALL_MACHINES_CFILES): Same.
	(BFD32_BACKENDS): Same.
	(BFD32_BACKENDS_CFILES): Same.

	* Makefile.in: Regenerate.

	* archures.c (bfd_architecture): Add ms1 entries.
	Externalize bfd_ms1_arch.
	(bfd_archures_list): Add bfd_ms1_arch.

	* bfd-in2.h: Regenerate.

	* cpu-ms1.c: New file.

	* elf32-ms1.c: New file.

	* targets.c: Define extern of bfd_elf32_ms1_vec.
	Add bfd_elf32_ms1_vec to _bfd_target_vector.

	* configure.in: Add bfd_elf32_ms1_vec case.

	* configure: Regenerate.

	* config.bfd: Add ms1-*-elf to table.

2005-06-07  Zack Weinberg  <zack@codesourcery.com>

	* coff-i386.c: Change md_apply_fix3 to md_apply_fix in comment.

2005-06-07  Alan Modra  <amodra@bigpond.net.au>

	* coff-rs6000.c (rs6000coff_vec, pmac_xcoff_vec): Init _bfd_find_line.
	* coff64-rs6000.c (rs6000coff64_vec, aix5coff64_vec): Likewise.

2005-06-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR 990
	* bfd.c (bfd_find_line): New.

	* dwarf2.c (comp_unit): Add variable_table.
	(funcinfo): Add file, line, and sec.
	(varinfo): New.